# rust-microservice

./: README.md  docker-compose.yml
docker/customer/: Dockerfile
src/services/customer/: .env  Cargo.toml  Dockerfile
src/services/customer/migrations/2021-01-24-045405_create_customer/: up.sql
src/services/customer/migrations/2021-01-24-222918_create_resort/: down.sql  up.sql
src/services/customer/src/: main.rs  schema.rs
src/services/customer/src/application/: mod.rs
src/services/customer/src/application/command/: get_all_customer_command.rs  mod.rs  register_customer_command.rs
src/services/customer/src/application/commandhandler/: get_all_customer_commandhandler.rs  mod.rs  register_customer_commandhandler.rs
src/services/customer/src/domain/: mod.rs
src/services/customer/src/domain/dto/: customer.rs  hotel.rs  mod.rs
src/services/customer/src/domain/entity/: customer.rs
src/services/customer/src/domain/repository/: customer_repository.rs
src/services/customer/src/domain/service/: mod.rs  resort_service.rs
src/services/customer/src/infrastructure/: mod.rs
src/services/customer/src/infrastructure/config/: config.rs
src/services/customer/src/infrastructure/di/: di.rs
src/services/customer/src/infrastructure/http/: resort_service.rs
src/services/customer/src/infrastructure/models/: customers.rs  mod.rs
src/services/resort/: .env  Cargo.toml  Dockerfile
src/services/resort/src/: main.rs  schema.rs
src/services/resort/src/application/: mod.rs
src/services/resort/src/domain/: mod.rs
src/services/resort/src/infrastructure/: mod.rs
(+76 files in other folders)
