[package]
name = "customer"
version = "0.1.0"
authors = ["Andros Serrano <serrano.hernandez90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
uuid = { version = "0.8", features = ["v4"] }
dotenv = "0.15.0"
log = "0.4"
serde = { version = "1.0.121", features = ["derive"]}
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }
lazy_static = "1.4.0"
mut_static = "5.0.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]