[package]
name = "resort"
version = "0.1.0"
authors = ["Andros Serrano <serrano.hernandez90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
uuid = { version = "0.8", features = ["v4"] }
dotenv = "0.15.0"
log = "0.4"
serde = { version = "1.0.121", features = ["derive"]}
diesel = { version = "1.4.4", features = ["postgres", "numeric"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]